2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Add options to index command.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Put index files in multiple dirs.
	* PkgVersion.pm, Engine.pm: Clean up splitoffs and relatives.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Incremental indexing. Not well tested, some operations
	still kinda slow.

2005-04-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Reduce direct access to private {_*} fields that
	have their own accessor methods. Remove private fields that can
	easily be generated on-the-fly by their accessor methods.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, SelfUpdate.pm: Finished cleanup, consolidated globals.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Indexing doesn't break now.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: More cleanup.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Remove 'rescan' command, nobody knows what it's for and
	nobody uses it.
	* Package.pm, PkgVersion.pm: Cleanup and document. More cleaning to come!

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Shlibs.pm: Stop Shlibs inheriting from Package, for it is
	silly.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Put g++-3.3 as g++ and c++ at the front of the PATH.
	* Bootstrap.pm: Include path-prefix in install files.

2005-04-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: backed out the default value for CXXFLAGS, added
	a default value for CXX instead
	* Bootstrap.pm:  recognize 10.3.9
	* PkgVersion.pm: make sure NoSetCXX still works

2005-04-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: put an actual file in the buildlock package.

2005-04-19  Daniel Macks  <dmacks@netspace.org>
