@@ -35,7 +35,7 @@ require Exporter;
 our @ISA	 = qw(Exporter Fink::Base);
 our @EXPORT_OK	 = qw($config $basepath $libpath $debarch $buildpath $dbpath
                       $distribution $ignore_errors
-                      get_option set_options verbosity_level binary_requested
+                      get_option set_options verbosity_level
                      );
 our $VERSION	 = 1.00;
 
@@ -559,7 +559,7 @@ sub verbosity_level {
 
 =item binary_requested
 
-	my $boolean = binary_requested;
+	my $boolean = $config->binary_requested();
 
 Determine whether the binary distribution or compilation has been requested.
 This is affected by the --use-binary-dist and --compile-from-source
@@ -569,6 +569,8 @@ Returns 1 for binary distribution, 0 for compile-from-source.
 =cut
 
 sub binary_requested {
+	my $self = shift;
+
 	my $runtime_request = get_option("use_binary");
 	my $binary_request;
 
@@ -576,7 +578,7 @@ sub binary_requested {
 		$binary_request = 0;
 	} elsif ($runtime_request == 1) {
 		$binary_request = 1;
-	} elsif ($config->param_boolean("UseBinaryDist")) {
+	} elsif ($self->param_boolean("UseBinaryDist")) {
 		$binary_request = 1;
 	} else {
 		$binary_request = 0;
